Hard coded advanced search result image size to avoid alignment issues

--- a/client/style/scss/MainAppStyle.scss
+++ b/client/style/scss/MainAppStyle.scss
@@ -437,3 +437,9 @@ body{
     color: white; 
     font-size: 75px;
 }
+
+#advancedsearch-result-image
+{
+    width: 80px;
+    height: 80px;
+}
